Ensure checkbox is clickable by adjusting z-index of input to be above warning labels

--- a/app/design/frontend/Vass/PU/web/css/source/_newsletter.less
+++ b/app/design/frontend/Vass/PU/web/css/source/_newsletter.less
@@ -42,7 +42,7 @@
             font-family: @font-family__base;
             .lib-font-size(18);
             font-weight: @font-weight__light;
-            line-height: @line-height__l;
+            line-height: @line-height__s;
         }
 
         &__row {
@@ -86,12 +86,12 @@
 
         & #newsletter-error {
             position: absolute;
-            padding-bottom: 10px;
+            padding-bottom: @indent__s;
         }
 
         & #tos-error {
             position: absolute;
-            padding-top: 50px;
+            padding-top: @indent__xl;
         }
     }
 
@@ -99,11 +99,11 @@
 
         &.newsletter {
             height: auto;
-            margin: 0;
 
             & input {
                 margin-right: @indent__s;
                 padding-right: @indent__m;
+                z-index: 1;
             }
 
             & .label {
@@ -134,11 +134,6 @@
                     margin-right: 0;
                     max-width: 371px;
                     gap: @indent__s;
-
-                    input[type="checkbox"] {
-                        padding-right: 10px;
-                    }
-
                 }
             }
         }
@@ -216,10 +211,6 @@
                     min-width: 540px;
                     line-height: @line-height__s;
                     flex-wrap: wrap;
-
-                    input[type="checkbox"] {
-                        padding-right: 15px;
-                    }
                 }
             }
 
